# ex_scylla

./: .gitignore  .tool-versions  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  mix.exs  run_scylla.sh
bench/: insert.exs  large_result.exs  query.exs  query_stream.exs
config/: bench.exs
lib/ex_scylla/: cql_types.ex  execution_profile.ex  native.ex  session.ex  session_builder.ex
lib/ex_scylla/types/: row.ex  (+22 more)
native/ex_scylla/: Cargo.toml  README.md  add_impls.sh  build.rs  default.profraw  ex_scylla.long-type-10913578754130310067.txt  ex_scylla.long-type-13198115230459366453.txt  ex_scylla.long-type-14901335657489573790.txt  ex_scylla.long-type-15456478864087995982.txt  ex_scylla.long-type-7239701015974350499.txt  ex_scylla.long-type-8142483037105526208.txt
native/ex_scylla/.cargo/: config  config.toml
native/ex_scylla/src/: batch.rs  consts.rs  errors.rs  execution_profile.rs  lib.rs  prepared_statement.rs  query.rs  runtime.rs  session.rs  session_builder.rs  test_builder.rs  types.rs  utils.rs
native/ex_scylla/src/batch/: types.rs
native/ex_scylla/src/execution/: execution_profile.rs  execution_profile_builder.rs  execution_profile_handle.rs  load_balancing.rs  mod.rs  pool_size.rs  retry_policy.rs  speculative_execution.rs
native/ex_scylla/src/execution_profile/: types.rs
native/ex_scylla/src/prepared_statement/: types.rs
native/ex_scylla/src/query/: types.rs
native/ex_scylla/src/session/: types.rs
native/ex_scylla/src/session_builder/: types.rs
native/ex_scylla/src/settings/: execution_profile.rs  execution_profile_builder.rs  execution_profile_handle.rs  load_balancing.rs  mod.rs  speculative_execution.rs
test/: session_builder_test.exs  session_test.exs  test_helper.exs
test/examples/: basic_test.exs  batch_test.exs  metrics_test.exs  paging_test.exs  parallel_test.exs  stream_test.exs  tracing_test.exs  zero_copy_test.exs
test/execution/: execution_profile_builder_test.exs  execution_profile_handle_test.exs  execution_profile_test.exs
test/statement/: batch_test.exs  prepared_test.exs  query_test.exs
test/utils/: test_support.ex
(+19 files in other folders)
