[package]
name = "ex_scylla"
version = "0.1.0"
authors = []
edition = "2021"

[lib]
name = "ex_scylla"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rustler_bigint = { git = "https://github.com/rusterlium/rustler", branch = "master" }
rustler = { git = "https://github.com/rusterlium/rustler", branch = "master" }
scylla = { version = "1.5.0", features = ["full-serialization", "metrics", "chrono-04", "bigdecimal-04", "num-bigint-03", "unstable-nodejs-rs"] }
scylla-cql = { version = "1.5.0", features = ["full-serialization", "unstable-nodejs-rs"] }
bytes = "1.4"
once_cell = "^1.18"
tokio = { version = "^1.32", features = ["full"] }
futures = "^0.3"
uuid = "^1.4"
bigdecimal = "^0.2"
chrono = "^0.4"
num-bigint = "^0.3"
tracing = "^0.1"
tracing-subscriber = "^0.3"
